explorations/static_library/src/vex_headers/v5_api.h


void                  vexDisplayLineClear( int32_t x1, int32_t y1, int32_t x2, int32_t y2 );

void                  vexDisplayRectDraw( int32_t x1, int32_t y1, int32_t x2, int32_t y2 );

void                  vexDisplayRectClear( int32_t x1, int32_t y1, int32_t x2, int32_t y2 );

void                  vexDisplayRectFill( int32_t x1, int32_t y1, int32_t x2, int32_t y2 );

void                  vexDisplayCircleDraw( int32_t xc, int32_t yc, int32_t radius );

void                  vexDisplayCircleClear( int32_t xc, int32_t yc, int32_t radius );

void                  vexDisplayCircleFill( int32_t xc, int32_t yc, int32_t radius );


void                  vexDisplayPrintf( int32_t xpos, int32_t ypos, uint32_t bOpaque, const char *format, ... );

void                  vexDisplayString( const int32_t nLineNumber, const char *format, ... );

void                  vexDisplayStringAt( int32_t xpos, int32_t ypos, const char *format, ... );

void                  vexDisplayBigString( const int32_t nLineNumber, const char *format, ... );

void                  vexDisplayBigStringAt( int32_t xpos, int32_t ypos, const char *format, ... );

void                  vexDisplaySmallStringAt( int32_t xpos, int32_t ypos, const char *format, ... );

void                  vexDisplayCenteredString( const int32_t nLineNumber, const char *format, ...);

void                  vexDisplayBigCenteredString( const int32_t nLineNumber, const char *format, ...);


// Not really for user code but we need these for some wrapper functions
void                  vexDisplayVPrintf( int32_t xpos, int32_t ypos, uint32_t bOpaque, const char *format, va_list args );

void                  vexDisplayVString( const int32_t nLineNumber, const char *format, va_list args );

void                  vexDisplayVStringAt( int32_t xpos, int32_t ypos, const char *format, va_list args );

void                  vexDisplayVBigString( const int32_t nLineNumber, const char *format, va_list args);

void                  vexDisplayVBigStringAt( int32_t xpos, int32_t ypos, const char *format, va_list args );

void                  vexDisplayVSmallStringAt( int32_t xpos, int32_t ypos, const char *format, va_list args );

void                  vexDisplayVCenteredString( const int32_t nLineNumber, const char *format, va_list args );

void                  vexDisplayVBigCenteredString( const int32_t nLineNumber, const char *format, va_list args );


void                  vexDisplayTextSize( uint32_t n, uint32_t d );

void                  vexDisplayFontNamedSet( const char *pFontName );

int32_t               vexDisplayStringWidthGet( const char *pString );

int32_t               vexDisplayStringHeightGet( const char *pString );


bool                  vexDisplayRender( bool bVsyncWait, bool bRunScheduler );

void                  vexDisplayDoubleBufferDisable(void);


void                  vexDisplayClipRegionSet( int32_t x1, int32_t y1, int32_t x2, int32_t y2 );

void                  vexDisplayClipRegionClear();


uint32_t              vexImageBmpRead( const uint8_t *ibuf, v5_image *oBuf, uint32_t maxw, uint32_t maxh );

uint32_t              vexImagePngRead( const uint8_t *ibuf, v5_image *oBuf, uint32_t maxw, uint32_t maxh, uint32_t ibuflen );

// special use only ! Talk to James.
int32_t               vexScratchMemoryPtr( void **ptr );

bool                  vexScratchMemoryLock( void );

void                  vexScratchMemoryUnlock( void );


// SD card
FRESULT               vexFileMountSD( void );

FRESULT               vexFileDirectoryGet( const char *path, char *buffer, uint32_t len );

FIL                  *vexFileOpen(const char *filename, const char *mode );

FIL                  *vexFileOpenWrite(const char *filename);

FIL                  *vexFileOpenCreate(const char *filename);

void                  vexFileClose(FIL *fdp);

int32_t               vexFileRead( char *buf, uint32_t size, uint32_t nItems, FIL *fdp );

int32_t               vexFileWrite( char *buf, uint32_t size, uint32_t nItems, FIL *fdp );

int32_t               vexFileSize( FIL *fdp );

FRESULT               vexFileSeek( FIL *fdp, uint32_t offset, int32_t whence );

bool                  vexFileDriveStatus( uint32_t drive );

int32_t               vexFileTell( FIL *fdp );

void                  vexFileSync( FIL *fdp );

uint32_t              vexFileStatus( const char *filename );


// CDC
int32_t               vexSerialWriteChar( uint32_t channel, uint8_t c );

int32_t               vexSerialWriteBuffer( uint32_t channel, uint8_t *data, uint32_t data_len );

int32_t               vexSerialReadChar( uint32_t channel );

int32_t               vexSerialPeekChar( uint32_t channel );

int32_t               vexSerialWriteFree( uint32_t channel );


// rtos hooks
void                  vexSystemTimerStop();

void                  vexSystemTimerClearInterrupt();

int32_t               vexSystemTimerReinitForRtos( uint32_t priority, void (*handler)(void *data) );

void                  vexSystemApplicationIRQHandler( uint32_t ulICCIAR );

int32_t               vexSystemWatchdogReinitRtos( void );

uint32_t              vexSystemWatchdogGet( void );


// Hooks into the interrupt system, some of these will be used by FreeRTOS
// the others are just placeholders for now
void                  vexSystemBoot( void );

void                  vexSystemUndefinedException( void );

void                  vexSystemFIQInterrupt( void );

void                  vexSystemIQRQnterrupt( void );

void                  vexSystemSWInterrupt( void );

void                  vexSystemDataAbortInterrupt( void );

void                  vexSystemPrefetchAbortInterrupt( void );


// touch
void                  vexTouchUserCallbackSet(void (* callback)(V5_TouchEvent, int32_t, int32_t));

bool                  vexTouchDataGet( V5_TouchStatus *status );


// system utility
uint32_t              vexSystemVersion( void );

uint32_t              vexStdlibVersion( void );

// get SDK version
uint32_t              vexSdkVersion( void );


// duplication of prototypes in v5_util.h for use by user code
uint32_t              vexStdlibVersionLinked( void );

bool                  vexStdlibVersionVerify( void );


// comp status
uint32_t              vexCompetitionStatus( void );

void                  vexCompetitionControl( uint32_t data );


// battery
int32_t               vexBatteryVoltageGet( void );

int32_t               vexBatteryCurrentGet( void );

double                vexBatteryTemperatureGet( void );

double                vexBatteryCapacityGet( void );