explorations/vex-rs/target/armv7a-vex-eabi/release/build/static_library-ac6bc70f8e50db25/out/bindings.rs

extern "C" {
    pub fn vexDisplayLineClear(x1: i32, y1: i32, x2: i32, y2: i32);
}
extern "C" {
    pub fn vexDisplayRectDraw(x1: i32, y1: i32, x2: i32, y2: i32);
}
extern "C" {
    pub fn vexDisplayRectClear(x1: i32, y1: i32, x2: i32, y2: i32);
}
extern "C" {
    pub fn vexDisplayRectFill(x1: i32, y1: i32, x2: i32, y2: i32);
}
extern "C" {
    pub fn vexDisplayCircleDraw(xc: i32, yc: i32, radius: i32);
}
extern "C" {
    pub fn vexDisplayCircleClear(xc: i32, yc: i32, radius: i32);
}
extern "C" {
    pub fn vexDisplayCircleFill(xc: i32, yc: i32, radius: i32);
}
extern "C" {
    pub fn vexDisplayPrintf(
        xpos: i32,
        ypos: i32,
        bOpaque: u32,
        format: *const ::core::ffi::c_char,
        ...
    );
}
extern "C" {
    pub fn vexDisplayString(nLineNumber: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplayStringAt(xpos: i32, ypos: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplayBigString(nLineNumber: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplayBigStringAt(xpos: i32, ypos: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplaySmallStringAt(xpos: i32, ypos: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplayCenteredString(nLineNumber: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplayBigCenteredString(nLineNumber: i32, format: *const ::core::ffi::c_char, ...);
}
extern "C" {
    pub fn vexDisplayVPrintf(
        xpos: i32,
        ypos: i32,
        bOpaque: u32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayVString(nLineNumber: i32, format: *const ::core::ffi::c_char, args: va_list);
}
extern "C" {
    pub fn vexDisplayVStringAt(
        xpos: i32,
        ypos: i32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayVBigString(
        nLineNumber: i32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayVBigStringAt(
        xpos: i32,
        ypos: i32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayVSmallStringAt(
        xpos: i32,
        ypos: i32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayVCenteredString(
        nLineNumber: i32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayVBigCenteredString(
        nLineNumber: i32,
        format: *const ::core::ffi::c_char,
        args: va_list,
    );
}
extern "C" {
    pub fn vexDisplayTextSize(n: u32, d: u32);
}
extern "C" {
    pub fn vexDisplayFontNamedSet(pFontName: *const ::core::ffi::c_char);
}
extern "C" {
    pub fn vexDisplayStringWidthGet(pString: *const ::core::ffi::c_char) -> i32;
}
extern "C" {
    pub fn vexDisplayStringHeightGet(pString: *const ::core::ffi::c_char) -> i32;
}
extern "C" {
    pub fn vexDisplayRender(bVsyncWait: bool, bRunScheduler: bool) -> bool;
}
extern "C" {
    pub fn vexDisplayDoubleBufferDisable();
}
extern "C" {
    pub fn vexDisplayClipRegionSet(x1: i32, y1: i32, x2: i32, y2: i32);
}
extern "C" {
    pub fn vexDisplayClipRegionClear();
}
extern "C" {
    pub fn vexImageBmpRead(ibuf: *const u8, oBuf: *mut v5_image, maxw: u32, maxh: u32) -> u32;
}
extern "C" {
    pub fn vexImagePngRead(
        ibuf: *const u8,
        oBuf: *mut v5_image,
        maxw: u32,
        maxh: u32,
        ibuflen: u32,
    ) -> u32;
}
extern "C" {
    pub fn vexScratchMemoryPtr(ptr: *mut *mut ::core::ffi::c_void) -> i32;
}
extern "C" {
    pub fn vexScratchMemoryLock() -> bool;
}
extern "C" {
    pub fn vexScratchMemoryUnlock();
}
extern "C" {
    pub fn vexFileMountSD() -> FRESULT;
}
extern "C" {
    pub fn vexFileDirectoryGet(
        path: *const ::core::ffi::c_char,
        buffer: *mut ::core::ffi::c_char,
        len: u32,
    ) -> FRESULT;
}
extern "C" {
    pub fn vexFileOpen(
        filename: *const ::core::ffi::c_char,
        mode: *const ::core::ffi::c_char,
    ) -> *mut FIL;
}
extern "C" {
    pub fn vexFileOpenWrite(filename: *const ::core::ffi::c_char) -> *mut FIL;
}
extern "C" {
    pub fn vexFileOpenCreate(filename: *const ::core::ffi::c_char) -> *mut FIL;
}
extern "C" {
    pub fn vexFileClose(fdp: *mut FIL);
}
extern "C" {
    pub fn vexFileRead(buf: *mut ::core::ffi::c_char, size: u32, nItems: u32, fdp: *mut FIL)
        -> i32;
}
extern "C" {
    pub fn vexFileWrite(
        buf: *mut ::core::ffi::c_char,
        size: u32,
        nItems: u32,
        fdp: *mut FIL,
    ) -> i32;
}
extern "C" {
    pub fn vexFileSize(fdp: *mut FIL) -> i32;
}
extern "C" {
    pub fn vexFileSeek(fdp: *mut FIL, offset: u32, whence: i32) -> FRESULT;
}
extern "C" {
    pub fn vexFileDriveStatus(drive: u32) -> bool;
}
extern "C" {
    pub fn vexFileTell(fdp: *mut FIL) -> i32;
}
extern "C" {
    pub fn vexFileSync(fdp: *mut FIL);
}
extern "C" {
    pub fn vexFileStatus(filename: *const ::core::ffi::c_char) -> u32;
}
extern "C" {
    pub fn vexSerialWriteChar(channel: u32, c: u8) -> i32;
}
extern "C" {
    pub fn vexSerialWriteBuffer(channel: u32, data: *mut u8, data_len: u32) -> i32;
}
extern "C" {
    pub fn vexSerialReadChar(channel: u32) -> i32;
}
extern "C" {
    pub fn vexSerialPeekChar(channel: u32) -> i32;
}
extern "C" {
    pub fn vexSerialWriteFree(channel: u32) -> i32;
}
extern "C" {
    pub fn vexSystemTimerStop();
}
extern "C" {
    pub fn vexSystemTimerClearInterrupt();
}
extern "C" {
    pub fn vexSystemTimerReinitForRtos(
        priority: u32,
        handler: ::core::option::Option<unsafe extern "C" fn(data: *mut ::core::ffi::c_void)>,
    ) -> i32;
}
extern "C" {
    pub fn vexSystemApplicationIRQHandler(ulICCIAR: u32);
}
extern "C" {
    pub fn vexSystemWatchdogReinitRtos() -> i32;
}
extern "C" {
    pub fn vexSystemWatchdogGet() -> u32;
}
extern "C" {
    pub fn vexSystemBoot();
}
extern "C" {
    pub fn vexSystemUndefinedException();
}
extern "C" {
    pub fn vexSystemFIQInterrupt();
}
extern "C" {
    pub fn vexSystemIQRQnterrupt();
}
extern "C" {
    pub fn vexSystemSWInterrupt();
}
extern "C" {
    pub fn vexSystemDataAbortInterrupt();
}
extern "C" {
    pub fn vexSystemPrefetchAbortInterrupt();
}
extern "C" {
    pub fn vexTouchUserCallbackSet(
        callback: ::core::option::Option<
            unsafe extern "C" fn(arg1: V5_TouchEvent, arg2: i32, arg3: i32),
        >,
    );
}
extern "C" {
    pub fn vexTouchDataGet(status: *mut V5_TouchStatus) -> bool;
}
extern "C" {
    pub fn vexSystemVersion() -> u32;
}
extern "C" {
    pub fn vexStdlibVersion() -> u32;
}
extern "C" {
    pub fn vexSdkVersion() -> u32;
}
extern "C" {
    pub fn vexStdlibVersionLinked() -> u32;
}
extern "C" {
    pub fn vexStdlibVersionVerify() -> bool;
}
extern "C" {
    pub fn vexCompetitionStatus() -> u32;
}
extern "C" {
    pub fn vexCompetitionControl(data: u32);
}
extern "C" {
    pub fn vexBatteryVoltageGet() -> i32;
}
extern "C" {
    pub fn vexBatteryCurrentGet() -> i32;
}
extern "C" {
    pub fn vexBatteryTemperatureGet() -> f64;
}
extern "C" {
    pub fn vexBatteryCapacityGet() -> f64;
}
#[repr(C)]
#[derive(Debug)]
pub struct vex_mevent {
    pub _event_id: ::core::ffi::c_int,
    pub _index: ::core::ffi::c_int,
}
extern "C" {
    #[link_name = "\u{1}_ZN3vex6meventC1Ejj"]
    pub fn vex_mevent_mevent(this: *mut vex_mevent, index: u32, id: u32);
}
impl vex_mevent {
    #[inline]
    pub unsafe fn new(index: u32, id: u32) -> Self {
        let mut __bindgen_tmp = ::core::mem::MaybeUninit::uninit();
        vex_mevent_mevent(__bindgen_tmp.as_mut_ptr(), index, id);
        __bindgen_tmp.assume_init()
    }
}
